updated all quickstarts with AP callout

--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -152,6 +152,12 @@ Let's use [the `UserButton` component](/reference-js/clerk/user-button) for an e
   ```
 </CodeBlockTabs>
 
+<Callout type="info" emoji="🎉">
+
+Your application is now using the [Account Portal](/account-portal/overview.mdx) which uses Clerk components embedded on dedicated hosted pages, start it now to see  them in action! For additional customization or if you prefer embedded components in your own application, follow the steps below.
+
+</Callout>
+
 </Steps>
 
 
