--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -105,6 +105,12 @@ function Welcome() {
 export default App;
 ```
 
+<Callout type="info" emoji="🎉">
+
+Your application is now using the [Account Portal](/account-portal/overview.mdx) which uses Clerk components embedded on dedicated hosted pages, start it now to see  them in action! For additional customization or if you prefer embedded components in your own application, follow the steps below.
+
+</Callout>
+
 #### Using a Routing Library with clerk
 
 Clerk can work with any routing library, below is an example of how to use Clerk with React Router and embedding the Clerk components in your application.
@@ -152,6 +158,8 @@ function ClerkProviderWithRoutes() {
     <ClerkProvider
       publishableKey={clerkPubKey}
       navigate={(to) => navigate(to)}
+      signInUrl="/sign-in"
+      signUpUrl="/sign-up"
     >
       <Routes>
         <Route path="/" element={<PublicPage />} />
