--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -210,6 +210,12 @@ export const CatchBoundary = ClerkCatchBoundary(YourBoundary);
 // Additional application code
 ```
 
+<Callout type="info" emoji="🎉">
+
+Your application is now using the [Account Portal](/account-portal/overview.mdx) which uses Clerk components embedded on dedicated hosted pages, start it now to see  them in action! For additional customization or if you prefer embedded components in your own application, follow the steps below.
+
+</Callout>
+
 Clerk offers a set of prebuilt components that you can use to embed sign in, sign up, and other user management functions into your Next.js application. We are going to use the `<SignIn />`,`<SignUp />` components by utlizing Remix routes.
 
 The functionality of the components are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.dev).
