--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -115,20 +115,60 @@ export const config = {
 
 With this middleware, your entire application is protected. If you try to access it, the middleware will redirect you to your Sign Up page. If you want to make other routes public, check out the [authMiddleware reference page](https://clerk.com/docs/nextjs/middleware).
 
+## Embed the <UserButton /> 
+
+The `<UserButton />` allows users to manage their account information and log out, thus allowing you to complete a full authentication circle.
+
+You can add it anywhere you want, but next to the logo in in your main application page is a good start.
+
+<Tabs items={["App Router", "Pages"]}>
+<Tab>
+```tsx copy filename="app/page.tsx"
+import { UserButton } from "@clerk/nextjs";
+
+export default function Home() {
+  return (
+    <div>
+      <UserButton afterSignOutUrl="/"/>
+    </div>
+  )
+}
+```
+</Tab>
+  <Tab>
+    ```tsx copy filename="pages/example.tsx"
+import { UserButton } from "@clerk/nextjs";
+ 
+export default function Example() {
+  return (
+    <>
+			<header>
+				<UserButton afterSignOutUrl="/"/>
+			</header>
+			<div>Your page's content can go here.</div>
+    </>
+  );
+}
+    ```
+  </Tab>
+</Tabs>
+
+## Sign up for your Application
+
+Now start your Next.js application via `npm run dev` , visit `http://localhost:3000`, and sign up to get access to your application.
 
 
 <Callout type="info" emoji="🎉">
 
- At this point, your application is fully protected by Clerk and uses Clerk's [Account Portal](/features/account-portal.mdx) pages that are available out of box. 
- 
- You can start your Next.js application via `npm run dev`, visit `http://localhost:3000`, and sign up to get access to your application.
+Your application is now using the [Account Portal](/account-portal/overview.mdx) which uses Clerk components embedded on dedicated hosted pages, start it now to see  them in action! For additional customization or if you prefer embedded components in your own application, follow the steps below.
+
 </Callout>
+
 
 
 ## Build your own sign in and sign up pages
 
 In addition to the Account Portal, Clerk also offers a set of prebuilt components that you can use instead to embed sign in, sign up, and other user management functions into your Next.js application. We are going to use the `<SignIn />`, `<SignUp />` components by utilizing the Next.js optional catch all route.
-
 
 
 ### Build your sign up page
@@ -197,47 +237,7 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
 These values control the behavior of the components when you sign in or sign up and when you click on the respective links at the bottom of each component.
 
-## Embed the <UserButton /> 
 
-The `<UserButton />` allows users to manage their account information and log out, thus allowing you to complete a full authentication circle.
-
-You can add it anywhere you want, but next to the logo in in your main application page is a good start.
-
-<Tabs items={["App Router", "Pages"]}>
-<Tab>
-```tsx copy filename="app/page.tsx"
-import { UserButton } from "@clerk/nextjs";
-
-export default function Home() {
-  return (
-    <div>
-      <UserButton afterSignOutUrl="/"/>
-    </div>
-  )
-}
-```
-</Tab>
-  <Tab>
-    ```tsx copy filename="pages/example.tsx"
-import { UserButton } from "@clerk/nextjs";
- 
-export default function Example() {
-  return (
-    <>
-			<header>
-				<UserButton afterSignOutUrl="/"/>
-			</header>
-			<div>Your page's content can go here.</div>
-    </>
-  );
-}
-    ```
-  </Tab>
-</Tabs>
-
-## Sign up for your Application
-
-Now start your Next.js application via `npm run dev` , visit `http://localhost:3000`, and sign up to get access to your application.
 
 
 
