--- a/docs/quickstarts/redwood.mdx
+++ b/docs/quickstarts/redwood.mdx
@@ -71,6 +71,13 @@ const HomePage = () => {
 export default HomePage
 ```
 
+<Callout type="info" emoji="🎉">
+
+Your application is now using the [Account Portal](/account-portal/overview.mdx) which uses Clerk components embedded on dedicated hosted pages, start it now to see  them in action! For additional customization or if you prefer embedded components in your own application, follow the steps below.
+
+</Callout>
+
+
 ### Using Clerk components directly
 
 ```tsx filename="index.tsx" copy
