Apply suggestions from code review
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/components/unstyled/sign-out-button.mdx
+++ b/docs/components/unstyled/sign-out-button.mdx
@@ -1,6 +1,6 @@
 ---
 title: <SignOutButton />
-description: The `<SignOutButton/>` component is a button that signs a user out.
+description: The `<SignOutButton />` component is a button that signs a user out.
 ---
 
 import { Tab, Tabs } from "nextra-theme-docs";
@@ -10,7 +10,7 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `<SignOutButton />`
 
-The `<SignOutButton/>` component is a button that signs a user out. By default, it is a `<button>` tag that says **Sign Out**, but it is completely customizable by passing children.
+The `<SignOutButton />` component is a button that signs a user out. By default, it is a `<button>` tag that says **Sign Out**, but it is completely customizable by passing children.
 
 ## Usage
 
@@ -140,6 +140,7 @@ In some cases you will want to use your own button, or button text. You can do t
 
 <Tables
   headings={["Name", "Type", "Description"]}
+  headingsMeta={[{maxWidth:'300px'}, {maxWidth:'300px'}, {maxWidth:'300px'}]}
   rows={[
     {
       cells: [
