chore: use sentence casing for headings

--- a/docs/advanced-usage/clerk-idp.mdx
+++ b/docs/advanced-usage/clerk-idp.mdx
@@ -19,12 +19,12 @@ Learn how to use Clerk to facilitate Single Sign-On (SSO) with other clients tha
 />
 
 <Steps>
-### Retrieve Callback URL from the client application
+### Retrieve callback URL from the client application
 
 Retrieve the **Callback URL** for the client application you want to configure. This is where your users will be redirected to after a successful authentication and is required to successfully create your OAuth application in the next step.
 
 
-### Create an OAuth Application in Clerk
+### Create an OAuth application in Clerk
 
 Next, you need to create an OAuth Application in Clerk via the [Backend API](https://clerk.com/docs/reference/backend-api/tag/OAuth-Applications) by providing the Callback URL and a Name. Note that in this context the name is used to help you identify your application and is not displayed anywhere publicly.
 
@@ -68,7 +68,7 @@ Clerk creates an OAuth application and returns it's configurations back to you.
 </Callout>
 
 
-### Configure OAuth Application in client
+### Configure OAuth cpplication in client
 
 Now that you have set up an OAuth application in Clerk, you will need to configure these settings in your Client.
 
