--- a/docs/advanced-usage/manual-jwt.mdx
+++ b/docs/advanced-usage/manual-jwt.mdx
@@ -45,7 +45,7 @@ To verify the token signature, you should:
 If the above process is successful, it means that the user is signed in to your application and you can consider them authenticated. You can also retrieve the session ID and user ID out of the token's claims.
 </Steps>
 
-## Example Usage
+## Example usage
 
 ```tsx copy filename="pages/api/token-example.ts"
 import type { NextApiRequest, NextApiResponse } from "next";
