--- a/docs/authentication/social-connections/linear.mdx
+++ b/docs/authentication/social-connections/linear.mdx
@@ -30,7 +30,7 @@ For the Callback URLs field, go to the [Social Connections page](https://dashboa
 
 ![](/docs/images/authentication-providers/linear/a2765ad6577f24e722a2135bcf4c7760744c85c7-1399x885.png)
 
-When you have filled all the necessary info, click **Create**ß. Congratulations, you have successfully created your Linear OAuth application.
+When you have filled all the necessary info, click **Create**. Congratulations, you have successfully created your Linear OAuth application.
 
 ![](/docs/images/authentication-providers/linear/d43440ad2d564b7ec7f5809a44156bc8b3911a4b-1065x596.png)
 
