--- a/docs/components/customization/overview.mdx
+++ b/docs/components/customization/overview.mdx
@@ -15,7 +15,7 @@ The appearance prop can be applied to [React's `<ClerkProvider />`](/docs/compon
 
 This applies to all of the React-based packages, like [Next.js](/docs/quickstarts/nextjs) and [Gatsby](/docs/quickstarts/gatsby), as well as [the pure JavaScript ClerkJS package](/docs/references/javascript/overview).
 
-## Using a Pre-built Theme
+## Using a pre-built Theme
 
 Clerk offers [a set of themes that can be used with the `appearance` prop](/docs/components/customization/themes). The themes are available as a package called `@clerk/themes`.
 
@@ -132,7 +132,7 @@ Clerk offers [a set of themes that can be used with the `appearance` prop](/docs
 
 > [You can see a list of the themes Clerk offers in our reference docs.](/docs/components/customization/themes)
 
-## Making a Custom Theme
+## Making a custom theme
 
 You can make a custom theme for your app's Clerk component by customizing the styles that are applied to each element.
 
@@ -282,7 +282,7 @@ function MyApp({ pageProps }: AppProps) {
 export default MyApp;
 ```
 
-### Inline CSS Objects
+### Inline CSS objects
 
 Using the same method for identifying elements as mentioned previously, you can pass an object of CSS properties to the `elements` property on `appearance` in your `ClerkProvider`.
 
@@ -314,7 +314,7 @@ function MyApp({ pageProps }: AppProps) {
 export default MyApp;
 ```
 
-## Next Steps
+## Next steps
 
 Here are a few resources you can utilize to customize your Clerk components further:
 
