--- a/docs/components/unstyled/sign-up-button.mdx
+++ b/docs/components/unstyled/sign-up-button.mdx
@@ -14,7 +14,7 @@ The `<SignUpButton />` component is a button that links to the sign-up page or d
 
 ## Usage
 
-#### Basic Usage
+#### Basic usage
 
 <CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby']}>
   ```jsx copy filename="pages/index.js"
@@ -70,7 +70,7 @@ The `<SignUpButton />` component is a button that links to the sign-up page or d
   ```
 </CodeBlockTabs>
 
-#### Custom Usage
+#### Custom usage
 
 In some cases you will want to use your own button, or button text. You can do that by wrapping your button up.
 
