--- a/docs/deployments/overview.mdx
+++ b/docs/deployments/overview.mdx
@@ -68,11 +68,11 @@ Once you've completed all the above steps, you're ready to go to the home page, 
 
 ## Troubleshooting
 
-### DNS Records not propagating with Cloudflare
+### DNS records not propagating with Cloudflare
 
 Clerk uses a DNS check to validate this CNAME record. If this subdomain is reverse proxied behind a service that points to generic hostnames, such as Cloudflare, the DNS check will fail. Please set the DNS record for this subdomain to a "DNS only" mode on your host to prevent proxying.
 
-### Incorrect Domain
+### Incorrect domain
 
 If you accidently set the wrong domain, you can change it by using our backend API. You can find the Secret key in the settings page of your production instance. You can then use the following curl command to change the domain:
 
