--- a/docs/quickstarts/gatsby.mdx
+++ b/docs/quickstarts/gatsby.mdx
@@ -147,7 +147,7 @@ export default function Example() {
 }
 ```
 
-### SSR Usage
+### SSR usage
 
 ```tsx copy filename="pages/SSRPage.tsx"
 import * as React from 'react';
