--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -249,7 +249,7 @@ Now start your Next.js application via `npm run dev` , visit `http://localhost:3
 
 Clerk provides a set of hooks and helpers that you can use to access the active session and user data in your Next.js application.  Here are examples of how to use these helpers in both the client and server side to get you started.
 
-### Client Side
+### Client side
 
 #### `useAuth`
 
@@ -294,7 +294,7 @@ export default function Example() {
 }
 ```
 
-### Server Side
+### Server side
 
 #### API Routes
 
@@ -339,7 +339,7 @@ export default async function handler(
 }
 ```
 
-### Server Side Render User Data
+### Server side render user data
 
 <Tabs items={["App Directory", "Pages Directory"]}>
 <Tab>
