--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -223,7 +223,7 @@ Clerk offers a set of prebuilt components that you can use to embed sign in, sig
 
 The functionality of the components are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.dev).
 
-### Build Your Sign Up
+### Build your sign up
 
 ```tsx filename="app/routes/sign-up.$.tsx" copy
 import { SignUp } from "@clerk/remix";
@@ -263,9 +263,9 @@ To make sure you are using the embedded components, you will need to update your
   By default, the Clerk components inherit the font family.
 </Callout>
 
-### Protecting Your Pages
+### Protecting your pages
 
-#### Client Side
+#### Client side
 
 Clerk offers Control Components that allow you to protect your pages. Below is a simple example using Clerk's hosted components and the `<SignedIn/>` and `<SignedOut/>` control components.
 
@@ -293,7 +293,7 @@ export default function Index() {
 }
 ```
 
-#### Server Side
+#### Server side
 
 To protect your routes, you can use the the loader to check for the `userId` singleton. If it doesn't exist, redirect your user back to the sign in page.
 
@@ -321,11 +321,11 @@ export default function Index() {
 }
 ```
 
-### Read Session & User Data
+### Read session and user data
 
 Clerk provides a set of hooks and helpers that you can use to access the active session and user data in your Remix application. Here are examples of how to use these helpers.
 
-#### Client Side
+#### Client side
 
 #### `useAuth()`
 
@@ -368,7 +368,7 @@ export default function Example() {
 }
 ```
 
-#### Server Side
+#### Server side
 
 #### `getAuth()`
 
@@ -390,7 +390,7 @@ export const loader: LoaderFunction = async (args) => {
 };
 ```
 
-#### Retrieve Full User
+#### Retrieve full user
 
 ```tsx filename="routes/example.tsx" copy
 import { LoaderFunction, redirect } from "@remix-run/node";
