--- a/docs/references/gatsby/with-server-auth.mdx
+++ b/docs/references/gatsby/with-server-auth.mdx
@@ -48,7 +48,7 @@ function withServer(cb: Callback, options: Options): GetServerDataReturn;
 
 Gatsby then automatically passes the result of `withServer`'s callback to the `serverData` property on the page's component props.
 
-### Callback Props
+### Callback props
 
 <Tables
   headings={["Name", "Type", "Description"]}
