--- a/docs/references/javascript/clerk/clerk.mdx
+++ b/docs/references/javascript/clerk/clerk.mdx
@@ -365,7 +365,7 @@ function authenticateWithMetamask({
 </div>
 
 
-## Additional Methods
+## Additional methods
 
 In addition to the methods listed above, the `Clerk` class also has the following methods:
 
@@ -396,7 +396,7 @@ In addition to the methods listed above, the `Clerk` class also has the followin
 - [`buildCreateOrganizationUrl()`](/docs/references/javascript/clerk/build-urls#build-create-organization-url)
 - [`buildOrganizationProfileUrl()`](/docs/references/javascript/clerk/build-urls#build-organization-profile-url)
 
-### Handle Navigation
+### Handle navigation
 
 - [`handleMagicLinkVerification()`](/docs/references/javascript/clerk/handle-navigation#handle-magic-link-verification)
 - [`handleRedirectCallback()`](/docs/references/javascript/clerk/handle-navigation#handle-redirect-callback)
