--- a/docs/references/javascript/email-address/email-address.mdx
+++ b/docs/references/javascript/email-address/email-address.mdx
@@ -98,7 +98,7 @@ The second function can be used to stop polling at any time, allowing for full c
   ]}
 />
 
-## Additional Methods
+## Additional methods
 
 In addition to the methods listed above, the `EmailAddress` class also has the following methods:
 
