--- a/docs/references/javascript/organization/organization.mdx
+++ b/docs/references/javascript/organization/organization.mdx
@@ -112,7 +112,7 @@ Sets or replaces an organization's logo.  Accept the logo as a file or blob. The
   ]}
 />
 
-## Additional Methods
+## Additional methods
 
 In addition to the methods listed above, the `Organization` class also has the following methods:
 
