--- a/docs/references/javascript/phone-number/phone-number.mdx
+++ b/docs/references/javascript/phone-number/phone-number.mdx
@@ -62,7 +62,7 @@ Returns the phone number value in [E.164 format](https://en.wikipedia.org/wiki/E
 
 The value is taken from the PhoneNumber.phoneNumber attribute.
 
-## Additional Methods
+## Additional methods
 
 In addition to the methods listed above, the `PhoneNumber` class also has the following methods:
 
@@ -71,7 +71,7 @@ In addition to the methods listed above, the `PhoneNumber` class also has the fo
 *   [`prepareVerification()`](/docs/references/javascript/phone-number/verification#prepare-verification)
 *   [`attemptVerification()`](/docs/references/javascript/phone-number/verification#attempt-verification)
 
-### Second Factor
+### Second factor
 
 *   [`makeDefaultSecondFactor()`](/docs/references/javascript/phone-number/second-factor#make-default-second-factor)
 *   [`setReservedForSecondFactor()`](/docs/references/javascript/phone-number/second-factor#set-reserved-for-second-factor)
