--- a/docs/references/javascript/sign-in/sign-in.mdx
+++ b/docs/references/javascript/sign-in/sign-in.mdx
@@ -172,21 +172,21 @@ The second function can be used to stop polling at any time, allowing for full c
   ]}
 />
 
-## Additional Methods
+## Additional methods
 
 In addition to the methods listed above, the `SignIn` class also has the following methods:
 
-### First Factor
+### First factor
 
 *   [`prepareFirstFactor()`](/docs/references/javascript/sign-in/first-factor#prepare-first-factor)
 *   [`attemptFirstFactor()`](/docs/references/javascript/sign-in/first-factor#attempt-first-factor)
 
-### Second Factor
+### Second factor
 
 *   [`prepareSecondFactor()`](/docs/references/javascript/sign-in/second-factor#prepare-second-factor)
 *   [`attemptSecondFactor()`](/docs/references/javascript/sign-in/second-factor#attempt-second-factor)
 
-### Authenticate With
+### Authenticate with
 
 *   [`authenticateWithRedirect()`](/docs/references/javascript/sign-in/authenticate-with#authenticate-with-redirect)
 *   [`authenticateWithMetamask()`](/docs/references/javascript/sign-in/authenticate-with#authenticate-with-metamask)
