--- a/docs/references/javascript/sign-up/sign-up.mdx
+++ b/docs/references/javascript/sign-up/sign-up.mdx
@@ -148,11 +148,11 @@ The second function can be used to stop polling at any time, allowing for full c
   ]}
 />
 
-## Additional Methods
+## Additional methods
 
 In addition to the methods listed above, the `SignUp` class also has the following methods:
 
-### Authenticate With
+### Authenticate with
 
 *   [`authenticateWithRedirect()`](/docs/references/javascript/sign-up/authenticate-with#authenticate-with-redirect)
 *   [`authenticateWithMetamask()`](/docs/references/javascript/sign-up/authenticate-with#authenticate-with-metamask)
@@ -163,17 +163,17 @@ In addition to the methods listed above, the `SignUp` class also has the followi
 *   [`prepareVerification()`](/docs/references/javascript/sign-up/verification#prepare-verification)
 *   [`attemptVerification()`](/docs/references/javascript/sign-up/verification#attempt-verification)
 
-### Email Verification
+### Email verification
 
 *   [`prepareEmailAddressVerification()`](/docs/references/javascript/sign-up/email-verification#prepare-email-address-verification)
 *   [`attemptEmailAddressVerification()`](/docs/references/javascript/sign-up/email-verification#attempt-email-address-verification)
 
-### Phone Verification
+### Phone verification
 
 *   [`preparePhoneNumberVerification()`](/docs/references/javascript/sign-up/phone-verification#prepare-phone-number-verification)
 *   [`attemptPhoneNumberVerification()`](/docs/references/javascript/sign-up/phone-verification#attempt-phone-number-verification)
 
-### Web3 Verification
+### Web3 verification
 
 *   [`prepareWeb3WalletVerification()`](/docs/references/javascript/sign-up/web3-verification#prepare-web3-wallet-verification)
 *   [`attemptWeb3WalletVerification()`](/docs/references/javascript/sign-up/web3-verification#attempt-web3-wallet-verification)
