--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -186,23 +186,23 @@ A check whether or not the given resource is the primary identifier for the user
  ]}
   />
 
-## Additional Methods
+## Additional methods
 
 In addition to the methods listed above, the `User` class also has the following methods:
 
-### Time-based One-Time Password (TOTP)
+### Time-based one-time password (TOTP)
 
 *   [`createTOTP()`](/docs/references/javascript/user/totp#create-totp)
 *   [`verifyTOTP()`](/docs/references/javascript/user/totp#verify-totp)
 *   [`disableTOTP()`](/docs/references/javascript/user/totp#disable-totp)
 *   [`createBackupCode()`](/docs/references/javascript/user/totp#create-backup-code)
 
-### Password Management
+### Password management
 
 *   [`updatePassword()`](/docs/references/javascript/user/password-management#update-password)
 *   [`removePassword()`](/docs/references/javascript/user/password-management#remove-password)
 
-### Create Metadata
+### Create metadata
 
 *   [`createEmailAddress()`](/docs/references/javascript/user/create-metadata#create-email-address)
 *   [`createPhoneNumber()`](/docs/references/javascript/user/create-metadata#create-phone-number)
