--- a/docs/references/javascript/web3-wallet/web3-wallet.mdx
+++ b/docs/references/javascript/web3-wallet/web3-wallet.mdx
@@ -57,7 +57,7 @@ function toString(): string;
 
 Returns the `web3Wallet` hexadecimal string.
 
-## Additional Methods
+## Additional methods
 
 In addition to the methods listed above, the `Web3Wallet` class also has the following methods:
 
