--- a/docs/references/nextjs/build-clerk-props.mdx
+++ b/docs/references/nextjs/build-clerk-props.mdx
@@ -13,7 +13,7 @@ Clerk uses `buildClerkProps` to inform the client side helpers of the authentica
 
 ## Usage
 
-#### Basic Usage
+#### Basic usage
 
 ```tsx filename="pages/myServerSidePage" copy
 import { getAuth, buildClerkProps } from "@clerk/nextjs/server";
