--- a/docs/references/nextjs/get-auth.mdx
+++ b/docs/references/nextjs/get-auth.mdx
@@ -13,7 +13,7 @@ The `getAuth()` helper retrieves the authentication state allowing you to protec
 
 ## Usage
 
-#### Basic Usage
+#### Basic usage
 
 ```tsx filename="pages/api/example.ts" copy
 import { getAuth } from "@clerk/nextjs/server";
@@ -29,7 +29,7 @@ export default async function handler(
 }
 ```
 
-#### Protecting API Routes
+#### Protecting API routes
 
 It is important to protect your API routes to ensure that only authenticated users can access them. You can do this by checking if the `userId` is present in the `getAuth()` response.
 
