--- a/docs/references/nextjs/with-clerk-middleware.mdx
+++ b/docs/references/nextjs/with-clerk-middleware.mdx
@@ -13,7 +13,7 @@ The `withClerkMiddleware` wrapper allows Clerk to access session data on the ser
 
 ## Usage
 
-#### Basic Usage
+#### Basic usage
 
 This is the minimal amount of code needed to use Clerk Server Side helpers.
 
