--- a/docs/components/customization/themes.mdx
+++ b/docs/components/customization/themes.mdx
@@ -18,7 +18,7 @@ Clerk currently offers four pre-built themes that can be exported from `@clerk/t
 - [The "Shades of Purple" Theme](#shades-of-purple-theme)
 - [The "Neobrutalism" Theme](#neobrutalism-theme)
 
-## Default Theme
+## Default theme
 
 > Applied by default when no other theme is provided.
 
@@ -29,7 +29,7 @@ Clerk currently offers four pre-built themes that can be exported from `@clerk/t
   alt="A sign-in form with a light theme"
 /></div>
 
-## Dark Theme
+## Dark theme
 
 ```typescript
 import {dark} from "@clerk/themes";
@@ -42,7 +42,7 @@ import {dark} from "@clerk/themes";
   alt="A sign-in form with a dark theme"
 /></div>
 
-## Shades of Purple Theme
+## Shades of purple theme
 
 ```typescript
 import {shadesOfPurple} from "@clerk/themes";
@@ -55,7 +55,7 @@ import {shadesOfPurple} from "@clerk/themes";
   alt="A sign-in form with a purple and yellow theme"
 /></div>
 
-## Neobrutalism Theme
+## Neobrutalism theme
 
 ```typescript
 import {neobrutalism} from "@clerk/themes";
