--- a/docs/deployments/migrate-from-firebase.mdx
+++ b/docs/deployments/migrate-from-firebase.mdx
@@ -28,7 +28,7 @@ If you haven't already, install the Firebase CLI:
 npm install -g firebase-tools
 ```
 
-#### Login to Firebase
+#### Log in to Firebase
 
 Login into your Firebase account via the CLI.
 
@@ -64,7 +64,7 @@ Here's what this command is doing:
 
 You should now have a JSON file called `firebase-users.json` that contains all your Firebase users.
 
-### Retrieve your Password hash parameters
+### Retrieve your password hash parameters
 
 In your Firebase project’s dashboard, navigate to **Authentication** and click on the 3 vertical dots at the top of the user's list, then click on **Password hash parameters**.
 
