--- a/docs/quickstarts/expo.mdx
+++ b/docs/quickstarts/expo.mdx
@@ -40,7 +40,7 @@ Once you have a Expo application ready, you need to install Clerk's Expo SDK.
   </Tab>
 </Tabs>
 
-### Set Environment Variables
+### Set environment variables
 
 Below is an example of an `app.config.js` file. To get your keys, go to the API Keys page on the [Clerk dashboard](https://dashboard.clerk.com).
 
@@ -89,7 +89,7 @@ const styles = StyleSheet.create({
 });
 ```
 
-### Protecting Your Pages
+### Protecting your pages
 
 Clerk offers Control Components that allow you to protect your pages. In the example below, [`<SignedIn />`](/docs/components/control/signed-in) and [`<SignedOut />`](/docs/components/control/signed-out) control components are used.
 
@@ -130,7 +130,7 @@ Using expo requires you to create custom flows. Our quickstart guide shows you h
   The following flows are built on the default instance settings for Clerk. If you have changed your instance settings, you may need to make changes to the following code.
 </Callout>
 
-### Build Your Sign Up
+### Build your sign up
 
 The examples below use email and password to sign a user up. You will notice that there is a conditonal flow in the sign up page for verifying a code called `pendingVerification`. This is an important step, as it verifies that the user owns their email.
 
@@ -270,7 +270,7 @@ const styles = StyleSheet.create({
 });
 ```
 
-### Build Your Sign In
+### Build your sign in
 
 ```tsx filename="components/SignInScreen.tsx" copy
 import React from "react";
@@ -365,7 +365,7 @@ const styles = StyleSheet.create({
 });
 ```
 
-### OAuth Login
+### OAuth login
 
 If you want to add OAuth login flows to your Expo application, Clerk's OAtuh hook allows you to handle both sign in and sign up in a single flow.
 
@@ -621,7 +621,7 @@ const styles = StyleSheet.create({
 });
 ```
 
-### Read Session & User Data
+### Read session & user data
 
 Clerk provides a set of hooks and helpers that you can use to access the active session and user data in your Expo application. Here are examples of how to use these helpers.
 
