--- a/docs/references/javascript/phone-number/second-factor.mdx
+++ b/docs/references/javascript/phone-number/second-factor.mdx
@@ -8,7 +8,7 @@ import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
-# `PhoneNumber` Second Factor
+# `PhoneNumber` second factor
 
 These are all methods on [the `PhoneNumber` class](/docs/references/javascript/phone-number/phone-number) that allow you configure the configuration of a phone number as a second factor for multi-factor authentication (MFA).
 
