--- a/docs/references/javascript/phone-number/verification.mdx
+++ b/docs/references/javascript/phone-number/verification.mdx
@@ -8,7 +8,7 @@ import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
-# `PhoneNumber` Verification
+# `PhoneNumber` verification
 
 These are all methods on [the `PhoneNumber` class](/docs/references/javascript/phone-number/phone-number) that allow you to verify a user's phone number.
 
