--- a/docs/references/javascript/sign-in/authenticate-with.mdx
+++ b/docs/references/javascript/sign-in/authenticate-with.mdx
@@ -8,7 +8,7 @@ import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
-# Authenticate With
+# Authenticate with
 
 These are all methods on [the `SignIn` class](/docs/references/javascript/sign-in/sign-in) that allow you to authenticate with different methods.
 
