--- a/docs/references/javascript/sign-up/web3-verification.mdx
+++ b/docs/references/javascript/sign-up/web3-verification.mdx
@@ -8,7 +8,7 @@ import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
-# Web3 Verification
+# Web3 verification
 
 These are all methods on [the `SignUp` class](/docs/references/javascript/sign-up/sign-up) that allow you to verify a user's sign-up request via a web3 wallet.
 
