--- a/docs/references/javascript/web3-wallet/verification.mdx
+++ b/docs/references/javascript/web3-wallet/verification.mdx
@@ -8,7 +8,7 @@ import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
-# `Web3Wallet` Verification
+# `Web3Wallet` verification
 
 These are all methods on [the `Web3Wallet` class](/docs/references/javascript/web3-wallet/web3-wallet) that allow you to verify a user's web3 wallet.
 
