chore: apply suggestions from code review

--- a/docs/advanced-usage/clerk-idp.mdx
+++ b/docs/advanced-usage/clerk-idp.mdx
@@ -68,7 +68,7 @@ Clerk creates an OAuth application and returns it's configurations back to you.
 </Callout>
 
 
-### Configure OAuth cpplication in client
+### Configure OAuth application in client
 
 Now that you have set up an OAuth application in Clerk, you will need to configure these settings in your Client.
 
