--- a/docs/authentication/social-connections/apple.mdx
+++ b/docs/authentication/social-connections/apple.mdx
@@ -122,7 +122,7 @@ You'll be taken to a page titled **Download Your Key**. From here, you want to n
 
 With the Key ID and your private key at hand, you have everything you need to configure Apple SSO in your Clerk Dashboard. Click **Done**.
 
-### Configuring email source for Apple private relay users
+### Configuring Email Source for Apple Private Relay users
 
 > This section concerns only production instances. Development and staging instances are handled for you automatically.
 
