--- a/docs/deployments/deploy-to-vercel.mdx
+++ b/docs/deployments/deploy-to-vercel.mdx
@@ -47,7 +47,7 @@ Once you press **Deploy**, your app will deploy to production!
 
 To add your Clerk API keys to an existing Vercel project, start by selecting your project [from your Vercel dashboard](https://vercel.com/dashboard):
 
-![A card for the **clerk-nextjs-starter** project on our Vercel dashboard](/docs/images/deployment-guides/vercel-existing-project.png)
+![A card for the "clerk-nextjs-starter" project on our Vercel dashboard](/docs/images/deployment-guides/vercel-existing-project.png)
 
 On the details page for your project, go to **Settings** in the navigation bar at the top:
 
