--- a/docs/references/javascript/clerk/create-organization.mdx
+++ b/docs/references/javascript/clerk/create-organization.mdx
@@ -81,7 +81,7 @@ function mountCreateOrganization(node: HTMLDivElement, props?: CreateOrganizatio
   cells: [
   "node",
   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The <code>{`<div>`}</code> element used to render in the `<CreateOrganization />` component</>
+  <>The <code>{`<div>`}</code> element used to render in the {"<CreateOrganization />"} component</>
   ],
   },
   {
@@ -161,7 +161,7 @@ function unmountCreateOrganization(node: HTMLDivElement): void;
   cells: [
   "node",
   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The container <code>{`<div>`}</code> element with a rendered `<CreateOrganization />` component instance</>
+  <>The container <code>{`<div>`}</code> element with a rendered {"<CreateOrganization />"} component instance</>
   ],
   },
   ]}
