--- a/docs/references/javascript/clerk/organization-switcher.mdx
+++ b/docs/references/javascript/clerk/organization-switcher.mdx
@@ -82,7 +82,7 @@ function mountOrganizationSwitcher(node: HTMLDivElement, props?: OrganizationSwi
   cells: [
   "node",
   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The <code>{`<div>`}</code> element used to render in the `<OrganizationSwitcher />` component</>
+  <>The <code>{`<div>`}</code> element used to render in the {"<OrganizationSwitcher />"} component</>
   ],
   },
   {
@@ -162,7 +162,7 @@ function unmountOrganizationSwitcher(node: HTMLDivElement): void;
   cells: [
   "node",
   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The container <code>{`<div>`}</code> element with a rendered `<OrganizationSwitcher />` component instance</>
+  <>The container <code>{`<div>`}</code> element with a rendered {"<OrganizationSwitcher />"} component instance</>
   ],
   },
   ]}
