--- a/docs/references/javascript/clerk/sign-in.mdx
+++ b/docs/references/javascript/clerk/sign-in.mdx
@@ -84,7 +84,7 @@ function mountSignIn(node: HTMLDivElement, props?: SignInProps): void;
   cells: [
   "node",
   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The <code>{`<div>`}</code> element used to render in the `<SignIn />` component</>
+  <>The <code>{`<div>`}</code> element used to render in the {"<SignIn />"} component</>
   ],
   },
   {
@@ -164,7 +164,7 @@ function unmountSignIn(node: HTMLDivElement): void;
   cells: [
   "node",
   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The container <code>{`<div>`}</code> element with a rendered `<SignIn />` component instance</>
+  <>The container <code>{`<div>`}</code> element with a rendered {"<SignIn />"} component instance</>
   ],
   },
   ]}
