--- a/docs/references/javascript/clerk/sign-up.mdx
+++ b/docs/references/javascript/clerk/sign-up.mdx
@@ -84,7 +84,7 @@ function mountSignUp(node: HTMLDivElement, props?: SignUpProps): void;
   cells: [
   "node",
   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The <code>{`<div>`}</code> element used to render in the `<SignUp />` component</>
+  <>The <code>{`<div>`}</code> element used to render in the {"<SignUp />"} component</>
   ],
   },
   {
@@ -164,7 +164,7 @@ function unmountSignUp(node: HTMLDivElement): void;
   cells: [
   "node",
   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The container <code>{`<div>`}</code> element with a rendered `<SignUp />` component instance</>
+  <>The container <code>{`<div>`}</code> element with a rendered {"<SignUp />"} component instance</>
   ],
   },
   ]}
