--- a/docs/users/metadata.mdx
+++ b/docs/users/metadata.mdx
@@ -18,9 +18,9 @@ Metadata allows for custom data to be saved on the User object. There are three 
   headings={["Metadata", "Frontend API", "Backend API"]}
   headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
   rows={[
-    {cells: [<>Private</>, <>No read or write access</>, <>Read & write access</>]}
-    {cells: [<>Public</>, <>Read access</>, <>Read & write access</>]}
-    {cells: [<>Unsafe</>, <>Read & write acces</>, <>Read & write access</>]}
+    {cells: [<>Private</>, <>No read or write access</>, <>Read & write access</>]},
+    {cells: [<>Public</>, <>Read access</>, <>Read & write access</>]},
+    {cells: [<>Unsafe</>, <>Read & write access</>, <>Read & write access</>]}
   ]}
 />
 
