--- a/docs/references/javascript/clerk/organization-profile.mdx
+++ b/docs/references/javascript/clerk/organization-profile.mdx
@@ -81,7 +81,7 @@ function mountOrganizationProfile(node: HTMLDivElement, props?: OrganizationProf
   cells: [
   "node",
   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The <code>{`<div>`}</code> element used to render in the `<OrganizationProfile />` component</>
+  <>The <code>{`<div>`}</code> element used to render in the {"<OrganizationProfile />"} component</>
   ],
   },
   {
@@ -161,7 +161,7 @@ function unmountOrganizationProfile(node: HTMLDivElement): void;
   cells: [
   "node",
   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The container <code>{`<div>`}</code> element with a rendered `<OrganizationProfile />` component instance</>
+  <>The container <code>{`<div>`}</code> element with a rendered {"<OrganizationProfile />"} component instance</>
   ],
   },
   ]}
