--- a/docs/references/javascript/clerk/user-button.mdx
+++ b/docs/references/javascript/clerk/user-button.mdx
@@ -81,7 +81,7 @@ function mountUserButton(node: HTMLDivElement, props?: UserButtonProps): void;
   cells: [
   "node",
   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The <code>{`<div>`}</code> element used to render in the `<UserButton />` component</>
+  <>The <code>{`<div>`}</code> element used to render in the {"<UserButton />"} component</>
   ],
   },
   {
@@ -161,7 +161,7 @@ function unmountUserButton(node: HTMLDivElement): void;
   cells: [
   "node",
   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The container <code>{`<div>`}</code> element with a rendered `<UserButton />` component instance</>
+  <>The container <code>{`<div>`}</code> element with a rendered {"<UserButton />"} component instance</>
   ],
   },
   ]}
