--- a/docs/references/javascript/clerk/user-profile.mdx
+++ b/docs/references/javascript/clerk/user-profile.mdx
@@ -81,7 +81,7 @@ function mountUserProfile(node: HTMLDivElement, props?: UserProfileProps): void;
   cells: [
   "node",
   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The <code>{`<div>`}</code> element used to render in the `<UserProfile />` component</>
+  <>The <code>{`<div>`}</code> element used to render in the {"<UserProfile />"} component</>
   ],
   },
   {
@@ -161,7 +161,7 @@ function unmountUserProfile(node: HTMLDivElement): void;
   cells: [
   "node",
   <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
-  <>The container <code>{`<div>`}</code> element with a rendered `<UserProfile />` component instance</>
+  <>The container <code>{`<div>`}</code> element with a rendered {"<UserProfile />"} component instance</>
   ],
   },
   ]}
