--- a/docs/references/javascript/sign-up/sign-up.mdx
+++ b/docs/references/javascript/sign-up/sign-up.mdx
@@ -10,7 +10,7 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `SignUp`
 
-The `SignUp` object holds the state of the current sign up and provides helper methods to navigate and complete the [sign up flow](/docs/authentication/custom-flows). Once a sign up is complete, a new user is created.
+The `SignUp` object holds the state of the current sign up and provides helper methods to navigate and complete the [sign up flow](/docs/custom-flows). Once a sign up is complete, a new user is created.
 
 There are two important steps that need to be done in order for a sign up to be completed:
 
@@ -21,7 +21,7 @@ The above steps can be split into smaller actions (e.g. you don't have to supply
 
 Also, the attributes of the `SignUp` object can basically be grouped into three categories:
 
-- Those that contain information regarding the sign-up flow and what is missing in order for the sign-up to complete. For more information on these, check our [detailed sign-up flow guide.](/docs/custom-flows)
+- Those that contain information regarding the sign-up flow and what is missing in order for the sign-up to complete. For more information on these, check our [detailed sign-up flow guide.](/docs/custom-flows/overview)
 - Those that hold the different values that we supply to the sign-up. Examples of these are **`username`**, **`emailAddress`**, **`firstName`**, etc.
 - Those that contain references to the created resources once the sign-up is complete, i.e. **`createdSessionId`** and **`createdUserId`**.
 
