add /references/react/use-user to nav; use codeblocktabs instead of tabs where necessary; remove unnecessary imports

--- a/docs/quickstarts/expo.mdx
+++ b/docs/quickstarts/expo.mdx
@@ -3,7 +3,6 @@ title: Use Clerk with Expo
 description: Learn how to use Clerk to quickly and easily add secure authentication and user management to your Expo application.
 ---
 
-import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import {Steps} from "nextra-theme-docs";
 import { YouTube } from "@/components/Youtube";
@@ -20,25 +19,19 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 
 Once you have a Expo application ready, you need to install Clerk's Expo SDK.
 
-<Tabs items={["npm", "yarn", "pnpm"]}>
-  <Tab>
-    ```bash filename="terminal" copy
-    npm install @clerk/clerk-expo
-    ```
-  </Tab>
+<CodeBlockTabs options={["npm", "yarn", "pnpm"]}>
+  ```bash filename="terminal" copy
+  npm install @clerk/clerk-expo
+  ```
 
-  <Tab>
-    ```bash filename="terminal" copy
-    yarn add @clerk/clerk-expo
-    ```
-  </Tab>
+  ```bash filename="terminal" copy
+  yarn add @clerk/clerk-expo
+  ```
 
-  <Tab>
-    ```bash filename="terminal" copy
-    pnpm i @clerk/clerk-expo
-    ```
-  </Tab>
-</Tabs>
+  ```bash filename="terminal" copy
+  pnpm i @clerk/clerk-expo
+  ```
+</CodeBlockTabs>
 
 ### Set environment variables
 
@@ -471,25 +464,19 @@ You can use it as your client JWT storage by setting the `tokenCache` prop in yo
 
 #### Install expo-secure-store
 
-<Tabs items={["npm", "yarn", "pnpm"]}>
-  <Tab>
-    ```bash filename="terminal" copy
-    npm install expo-secure-store
-    ```
-  </Tab>
+<CodeBlockTabs options={["npm", "yarn", "pnpm"]}>
+  ```bash filename="terminal" copy
+  npm install expo-secure-store
+  ```
 
-  <Tab>
-    ```bash filename="terminal" copy
-    yarn add expo-secure-store
-    ```
-  </Tab>
+  ```bash filename="terminal" copy
+  yarn add expo-secure-store
+  ```
 
-  <Tab>
-    ```bash filename="your-project" copy
-    pnpm install install expo-secure-store
-    ```
-  </Tab>
-</Tabs>
+  ```bash filename="your-project" copy
+  pnpm install install expo-secure-store
+  ```
+</CodeBlockTabs>
 
 ***
 
