--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -57,8 +57,7 @@ CLERK_SECRET_KEY={{secret}}
 
 Update your root layout to include the `<ClerkProvider />` wrapper. The `<ClerkProvider />` component wraps your Next.js application to provide active session and user context to Clerk's hooks and other components. It is recommended that the `<ClerkProvider />` wraps the `<body/>` to enable the context to be accessible anywhere within the app.
 
-<Tabs items={["App Router", "Pages"]}>
-<Tab>
+<CodeBlockTabs options={["App Router", "Pages"]}>
 ```tsx copy filename="app/layout.tsx"
 import { ClerkProvider } from '@clerk/nextjs'
 
@@ -80,8 +79,7 @@ export default function RootLayout({
   )
 }
 ```
-</Tab>
-<Tab>
+
 ```tsx filename="_app.tsx" copy
 import { ClerkProvider } from "@clerk/nextjs";
 import type { AppProps } from "next/app";
@@ -94,8 +92,7 @@ function MyApp({ Component, pageProps }: AppProps) {
 }
 export default MyApp;
 ```
-</Tab>
-</Tabs>
+</CodeBlockTabs>
 
 <Callout type="warning">
   The root layout is a server component. If you plan to use the `<ClerkProvider />` outside the root layout, it will need to be a server component as well.
@@ -138,8 +135,7 @@ In addition to the Account Portal, Clerk also offers a set of prebuilt component
 ### Build your sign up page
 
 
-<Tabs items={["App Router", "Pages"]}>
-<Tab>
+<CodeBlockTabs options={["App Router", "Pages"]}>
 ```tsx copy filename="app/sign-up/[[...sign-up]]/page.tsx"
 import { SignUp } from "@clerk/nextjs";
 
@@ -147,8 +143,7 @@ export default function Page() {
   return <SignUp />;
 }
 ```
-</Tab>
-<Tab>
+
 ```tsx copy filename="/pages/sign-up/[[...index]].tsx"
 import { SignUp } from "@clerk/nextjs";
 
@@ -156,14 +151,12 @@ export default function Page() {
   return <SignUp />;
 }
 ```
-</Tab>
-</Tabs>
+</CodeBlockTabs>
 
 ### Build your sign in page
 
 
-<Tabs items={["App Router", "Pages"]}>
-<Tab>
+<CodeBlockTabs options={["App Router", "Pages"]}>
 ```tsx copy filename="app/sign-in/page.tsx"
 import { SignIn } from "@clerk/nextjs";
 
@@ -171,8 +164,7 @@ export default function Page() {
   return <SignIn />;
 }
 ```
-</Tab>
-<Tab>
+
 ```tsx copy filename="/pages/sign-in/[[...index]].tsx"
 import { SignIn } from "@clerk/nextjs";
 
@@ -180,8 +172,7 @@ export default function Page() {
   return <SignIn />;
 }
 ```
-</Tab>
-</Tabs>
+</CodeBlockTabs>
 
 <Callout type="info" emoji="ℹ️">
   By default, the Clerk components inherit the font family. `create-next-app` does not apply a global font family. When you launch your application, you may notice that the font family is different.
@@ -207,8 +198,7 @@ The `<UserButton />` allows users to manage their account information and log ou
 
 You can add it anywhere you want, but next to the logo in your main application page is a good start.
 
-<Tabs items={["App Router", "Pages"]}>
-<Tab>
+<CodeBlockTabs items={["App Router", "Pages"]}>
 ```tsx copy filename="app/page.tsx"
 import { UserButton } from "@clerk/nextjs";
 
@@ -220,8 +210,7 @@ export default function Home() {
   )
 }
 ```
-</Tab>
-<Tab>
+
 ```tsx copy filename="pages/example.tsx"
 import { UserButton } from "@clerk/nextjs";
  
@@ -236,8 +225,7 @@ export default function Example() {
   );
 }
 ```
-</Tab>
-</Tabs>
+</CodeBlockTabs>
 
 ## Sign up for your application
 
