--- a/docs/references/react/use-session-list.mdx
+++ b/docs/references/react/use-session-list.mdx
@@ -3,9 +3,9 @@ title: useSessionList()
 description: The `useSessionList` hook provides returns an array of Session objects that have been registered on the client device.
 ---
 
-
 import { Callout } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
+import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `useSessionList()`
 
@@ -13,8 +13,7 @@ The `useSessionList` hook provides returns an array of Session objects that have
 
 ## Usage
 
-<Tabs items={['Next.js', 'React']}>
-<Tab>
+<CodeBlockTabs options={['Next.js', 'React']}>
 ```tsx copy filename="pages/index.tsx"
 import { useSessionList } from "@clerk/nextjs";
 
@@ -34,8 +33,7 @@ export default function Home() {
   )
 }
 ```
-</Tab>
-<Tab>
+
 ```tsx copy filename="home.tsx"
 import { useSessionList } from "@clerk/clerk-react";
 
@@ -55,8 +53,7 @@ export default function Home() {
   )
 }
 ```
-</Tab>
-</Tabs>
+</CodeBlockTabs>
 
 <Tables
   headings={["Variables", "Description"]}
