--- a/docs/references/react/use-user.mdx
+++ b/docs/references/react/use-user.mdx
@@ -3,9 +3,9 @@ title: useUser()
 description: The `useUser` hook is used to get the current user object and to update the user's data on the client side.
 ---
 
-import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
+import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `useUser()`
 
@@ -15,53 +15,49 @@ The `useUser` hook is used to get the current user object and to update the user
 
 ### Retrieve the current user data
 
-<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
-<Tab>
+<CodeBlockTabs options={['Next.js', 'React']}>
 ```tsx copy filename="pages/index.tsx"
 import { useUser } from "@clerk/nextjs";
 
 export default function Home() {
   const { isSignedIn, user, isLoaded } = useUser();
 
-if (!isLoaded) {
-return null;
-}
+  if (!isLoaded) {
+    return null;
+  }
 
-if (isSignedIn) {
-return <div>Hello {user.fullName}!</div>;
-}
+  if (isSignedIn) {
+    return <div>Hello {user.fullName}!</div>;
+  }
 
-return <div>Not signed in</div>;
+  return <div>Not signed in</div>;
 }
 
 ```
-</Tab>
-<Tab>
+
 ```tsx copy filename="home.tsx"
 import { useUser } from "@clerk/clerk-react";
 
 export default function Home() {
   const { isSignedIn, user, isLoaded } = useUser();
 
-if (!isLoaded) {
-return null;
-}
+  if (!isLoaded) {
+    return null;
+  }
 
-if (isSignedIn) {
-return <div>Hello {user.fullName}!</div>;
-}
+  if (isSignedIn) {
+    return <div>Hello {user.fullName}!</div>;
+  }
 
-return <div>Not signed in</div>;
+  return <div>Not signed in</div>;
 }
 
 ```
-</Tab>
-</Tabs>
+</CodeBlockTabs>
 
 ### Update the current user data
 
-<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
-<Tab>
+<CodeBlockTabs options={['Next.js', 'React']}>
 ```tsx copy filename="home.tsx"
 import { useUser } from "@clerk/clerk-react";
 
@@ -83,8 +79,7 @@ export default function Home() {
   );
 }
 ```
-</Tab>
-<Tab>
+
 ```tsx copy filename="home.tsx"
 import { useUser } from "@clerk/clerk-react";
 
@@ -106,8 +101,7 @@ export default function Home() {
   );
 }
 ```
-</Tab>
-</Tabs>
+</CodeBlockTabs>
 
 
 <Tables 
