chore: update file names in codeblocktabs to be 'terminal' instead of 'your-project'

--- a/docs/quickstarts/fastify.mdx
+++ b/docs/quickstarts/fastify.mdx
@@ -55,18 +55,18 @@ CLERK_SECRET_KEY={{secret}}
 This examples uses `dontenv` to load the environment variables. You can use any other library or method, if you so wish.
 
 <CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
-  ```bash filename="your-project" copy
+  ```bash filename="terminal" copy
   npm install @dotenv
   npm install -D types/dotenv
   ```
 
-  ```bash filename="your-project" copy
+  ```bash filename="terminal" copy
   yarn add @clerk/fastify
   yarn add -D types/dotenv
   ```
   ```
 
-  ```bash filename="your-project" copy
+  ```bash filename="terminal" copy
   pnpm i @clerk/fastify
   pnpm i -D types/dotenv
   ```
