use correct prop 'options' instead of 'items' in codeblocktabs

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -198,7 +198,7 @@ The `<UserButton />` allows users to manage their account information and log ou
 
 You can add it anywhere you want, but next to the logo in your main application page is a good start.
 
-<CodeBlockTabs items={["App Router", "Pages"]}>
+<CodeBlockTabs options={["App Router", "Pages"]}>
 ```tsx copy filename="app/page.tsx"
 import { UserButton } from "@clerk/nextjs";
 
