chore: update file names in codeblocktabs to be 'terminal' instead of 'your-project'

--- a/docs/quickstarts/expo.mdx
+++ b/docs/quickstarts/expo.mdx
@@ -473,7 +473,7 @@ You can use it as your client JWT storage by setting the `tokenCache` prop in yo
   yarn add expo-secure-store
   ```
 
-  ```bash filename="your-project" copy
+  ```bash filename="terminal" copy
   pnpm install install expo-secure-store
   ```
 </CodeBlockTabs>
