chore: apply suggestions from code review

--- a/docs/references/javascript/clerk/user-button.mdx
+++ b/docs/references/javascript/clerk/user-button.mdx
@@ -195,7 +195,7 @@ All props below are optional.
   cells: [
   <code>userProfileMode</code>,
   <code>"modal" | "navigation"</code>,
-  <>Controls whether clicking the "Manage your account" button will cause the `<UserProfile />` component to open as a modal, or if the browser will navigate to the <code>userProfileUrl</code> where `<UserProfile />` is mounted as a page.</>,
+  <>Controls whether clicking the "Manage your account" button will cause the {"<UserProfile />"} component to open as a modal, or if the browser will navigate to the <code>userProfileUrl</code> where {"<UserProfile />"} is mounted as a page.</>,
   ],
   },
   {
